parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INCORRECT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements_group -> LPAREN statements inner_statement RPAREN
Rule 3     statements_group -> inner_statement
Rule 4     inner_statement -> declaration
Rule 5     inner_statement -> assignment
Rule 6     inner_statement -> while
Rule 7     inner_statement -> if
Rule 8     inner_statement -> command
Rule 9     inner_statement -> procedure
Rule 10    inner_statement -> call
Rule 11    inner_statement -> empty
Rule 12    inner_statement -> cell_proc
Rule 13    inner_statement -> arithmetic_expression
Rule 14    statements -> statements statement
Rule 15    statements -> statement
Rule 16    statement -> declaration NEWLINE
Rule 17    statement -> assignment NEWLINE
Rule 18    statement -> while NEWLINE
Rule 19    statement -> if NEWLINE
Rule 20    statement -> command NEWLINE
Rule 21    statement -> procedure NEWLINE
Rule 22    statement -> call NEWLINE
Rule 23    statement -> empty NEWLINE
Rule 24    statement -> cell_proc NEWLINE
Rule 25    statement -> arithmetic_expression NEWLINE
Rule 26    declaration -> type name
Rule 27    declaration -> type error
Rule 28    type -> INT
Rule 29    type -> CINT
Rule 30    type -> BOOLEAN
Rule 31    type -> CBOOLEAN
Rule 32    type -> MAP
Rule 33    assignment -> name EQUALS expression
Rule 34    assignment -> declaration EQUALS expression
Rule 35    assignment -> name EQUALS error
Rule 36    name -> NAME
Rule 37    number -> NUMBER
Rule 38    expression -> name
Rule 39    expression -> const
Rule 40    expression -> number
Rule 41    expression -> logic_expression
Rule 42    expression -> arithmetic_expression
Rule 43    const -> TRUE
Rule 44    const -> FALSE
Rule 45    logic_expression -> LT arithmetic_expression arithmetic_expression
Rule 46    logic_expression -> GT arithmetic_expression arithmetic_expression
Rule 47    logic_expression -> NOT logic_expression
Rule 48    logic_expression -> NOT call
Rule 49    logic_expression -> OR or_arg or_arg
Rule 50    arithmetic_expression -> INC first_ar second_ar
Rule 51    arithmetic_expression -> DEC first_ar second_ar
Rule 52    first_ar -> name
Rule 53    first_ar -> arithmetic_expression
Rule 54    first_ar -> call
Rule 55    second_ar -> name
Rule 56    second_ar -> arithmetic_expression
Rule 57    second_ar -> call
Rule 58    second_ar -> number
Rule 59    second_ar -> logic_expression
Rule 60    second_ar -> const
Rule 61    or_arg -> call
Rule 62    or_arg -> logic_expression
Rule 63    or_arg -> TRUE
Rule 64    or_arg -> FALSE
Rule 65    while -> WHILE logic_expression DO NEWLINE statements_group
Rule 66    while -> DO error
Rule 67    while -> WHILE error
Rule 68    if -> IF logic_expression NEWLINE statements_group
Rule 69    if -> IF logic_expression NEWLINE statements_group ELSE statements_group
Rule 70    if -> IF error
Rule 71    procedure -> PROC NAME parameters NEWLINE statements_group
Rule 72    procedure -> PROC error
Rule 73    command -> command error
Rule 74    command -> LEFT
Rule 75    command -> RIGHT
Rule 76    command -> BACK
Rule 77    command -> STEP
Rule 78    command -> LOOK
Rule 79    call -> NAME parameters
Rule 80    cell_proc -> BAR cell_arg
Rule 81    cell_proc -> EMP cell_arg
Rule 82    cell_proc -> SET cell_arg
Rule 83    cell_proc -> RESET cell_arg
Rule 84    cell_proc -> CLR cell_arg
Rule 85    cell_arg -> name name number number
Rule 86    cell_proc -> BAR error
Rule 87    cell_proc -> EMP error
Rule 88    cell_proc -> SET error
Rule 89    cell_proc -> RESET error
Rule 90    cell_proc -> CLR error
Rule 91    call -> NAME error
Rule 92    empty -> <empty>
Rule 93    parameters -> parameters name
Rule 94    parameters -> name

Terminals, with rules where they appear

BACK                 : 76
BAR                  : 80 86
BOOLEAN              : 30
CBOOLEAN             : 31
CINT                 : 29
CLR                  : 84 90
DEC                  : 51
DO                   : 65 66
ELSE                 : 69
EMP                  : 81 87
EQUALS               : 33 34 35
FALSE                : 44 64
GT                   : 46
IF                   : 68 69 70
INC                  : 50
INCORRECT            : 
INT                  : 28
LEFT                 : 74
LOOK                 : 78
LPAREN               : 2
LT                   : 45
MAP                  : 32
NAME                 : 36 71 79 91
NEWLINE              : 16 17 18 19 20 21 22 23 24 25 65 68 69 71
NOT                  : 47 48
NUMBER               : 37
OR                   : 49
PROC                 : 71 72
RESET                : 83 89
RIGHT                : 75
RPAREN               : 2
SET                  : 82 88
STEP                 : 77
TRUE                 : 43 63
WHILE                : 65 67
error                : 27 35 66 67 70 72 73 86 87 88 89 90 91

Nonterminals, with rules where they appear

arithmetic_expression : 13 25 42 45 45 46 46 53 56
assignment           : 5 17
call                 : 10 22 48 54 57 61
cell_arg             : 80 81 82 83 84
cell_proc            : 12 24
command              : 8 20 73
const                : 39 60
declaration          : 4 16 34
empty                : 11 23
expression           : 33 34
first_ar             : 50 51
if                   : 7 19
inner_statement      : 2 3
logic_expression     : 41 47 59 62 65 68 69
name                 : 26 33 35 38 52 55 85 85 93 94
number               : 40 58 85 85
or_arg               : 49 49
parameters           : 71 79 93
procedure            : 9 21
program              : 0
second_ar            : 50 51
statement            : 14 15
statements           : 1 2 14
statements_group     : 65 68 69 69 71
type                 : 26 27
while                : 6 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (14) statements -> . statements statement
    (15) statements -> . statement
    (16) statement -> . declaration NEWLINE
    (17) statement -> . assignment NEWLINE
    (18) statement -> . while NEWLINE
    (19) statement -> . if NEWLINE
    (20) statement -> . command NEWLINE
    (21) statement -> . procedure NEWLINE
    (22) statement -> . call NEWLINE
    (23) statement -> . empty NEWLINE
    (24) statement -> . cell_proc NEWLINE
    (25) statement -> . arithmetic_expression NEWLINE
    (26) declaration -> . type name
    (27) declaration -> . type error
    (33) assignment -> . name EQUALS expression
    (34) assignment -> . declaration EQUALS expression
    (35) assignment -> . name EQUALS error
    (65) while -> . WHILE logic_expression DO NEWLINE statements_group
    (66) while -> . DO error
    (67) while -> . WHILE error
    (68) if -> . IF logic_expression NEWLINE statements_group
    (69) if -> . IF logic_expression NEWLINE statements_group ELSE statements_group
    (70) if -> . IF error
    (73) command -> . command error
    (74) command -> . LEFT
    (75) command -> . RIGHT
    (76) command -> . BACK
    (77) command -> . STEP
    (78) command -> . LOOK
    (71) procedure -> . PROC NAME parameters NEWLINE statements_group
    (72) procedure -> . PROC error
    (79) call -> . NAME parameters
    (91) call -> . NAME error
    (92) empty -> .
    (80) cell_proc -> . BAR cell_arg
    (81) cell_proc -> . EMP cell_arg
    (82) cell_proc -> . SET cell_arg
    (83) cell_proc -> . RESET cell_arg
    (84) cell_proc -> . CLR cell_arg
    (86) cell_proc -> . BAR error
    (87) cell_proc -> . EMP error
    (88) cell_proc -> . SET error
    (89) cell_proc -> . RESET error
    (90) cell_proc -> . CLR error
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (28) type -> . INT
    (29) type -> . CINT
    (30) type -> . BOOLEAN
    (31) type -> . CBOOLEAN
    (32) type -> . MAP
    (36) name -> . NAME

    WHILE           shift and go to state 16
    DO              shift and go to state 17
    IF              shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    BACK            shift and go to state 21
    STEP            shift and go to state 22
    LOOK            shift and go to state 23
    PROC            shift and go to state 24
    NAME            shift and go to state 25
    NEWLINE         reduce using rule 92 (empty -> .)
    BAR             shift and go to state 26
    EMP             shift and go to state 27
    SET             shift and go to state 28
    RESET           shift and go to state 29
    CLR             shift and go to state 30
    INC             shift and go to state 31
    DEC             shift and go to state 32
    INT             shift and go to state 33
    CINT            shift and go to state 34
    BOOLEAN         shift and go to state 35
    CBOOLEAN        shift and go to state 36
    MAP             shift and go to state 37

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    if                             shift and go to state 7
    command                        shift and go to state 8
    procedure                      shift and go to state 9
    call                           shift and go to state 10
    empty                          shift and go to state 11
    cell_proc                      shift and go to state 12
    arithmetic_expression          shift and go to state 13
    type                           shift and go to state 14
    name                           shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (14) statements -> statements . statement
    (16) statement -> . declaration NEWLINE
    (17) statement -> . assignment NEWLINE
    (18) statement -> . while NEWLINE
    (19) statement -> . if NEWLINE
    (20) statement -> . command NEWLINE
    (21) statement -> . procedure NEWLINE
    (22) statement -> . call NEWLINE
    (23) statement -> . empty NEWLINE
    (24) statement -> . cell_proc NEWLINE
    (25) statement -> . arithmetic_expression NEWLINE
    (26) declaration -> . type name
    (27) declaration -> . type error
    (33) assignment -> . name EQUALS expression
    (34) assignment -> . declaration EQUALS expression
    (35) assignment -> . name EQUALS error
    (65) while -> . WHILE logic_expression DO NEWLINE statements_group
    (66) while -> . DO error
    (67) while -> . WHILE error
    (68) if -> . IF logic_expression NEWLINE statements_group
    (69) if -> . IF logic_expression NEWLINE statements_group ELSE statements_group
    (70) if -> . IF error
    (73) command -> . command error
    (74) command -> . LEFT
    (75) command -> . RIGHT
    (76) command -> . BACK
    (77) command -> . STEP
    (78) command -> . LOOK
    (71) procedure -> . PROC NAME parameters NEWLINE statements_group
    (72) procedure -> . PROC error
    (79) call -> . NAME parameters
    (91) call -> . NAME error
    (92) empty -> .
    (80) cell_proc -> . BAR cell_arg
    (81) cell_proc -> . EMP cell_arg
    (82) cell_proc -> . SET cell_arg
    (83) cell_proc -> . RESET cell_arg
    (84) cell_proc -> . CLR cell_arg
    (86) cell_proc -> . BAR error
    (87) cell_proc -> . EMP error
    (88) cell_proc -> . SET error
    (89) cell_proc -> . RESET error
    (90) cell_proc -> . CLR error
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (28) type -> . INT
    (29) type -> . CINT
    (30) type -> . BOOLEAN
    (31) type -> . CBOOLEAN
    (32) type -> . MAP
    (36) name -> . NAME

    $end            reduce using rule 1 (program -> statements .)
    WHILE           shift and go to state 16
    DO              shift and go to state 17
    IF              shift and go to state 18
    LEFT            shift and go to state 19
    RIGHT           shift and go to state 20
    BACK            shift and go to state 21
    STEP            shift and go to state 22
    LOOK            shift and go to state 23
    PROC            shift and go to state 24
    NAME            shift and go to state 25
    NEWLINE         reduce using rule 92 (empty -> .)
    BAR             shift and go to state 26
    EMP             shift and go to state 27
    SET             shift and go to state 28
    RESET           shift and go to state 29
    CLR             shift and go to state 30
    INC             shift and go to state 31
    DEC             shift and go to state 32
    INT             shift and go to state 33
    CINT            shift and go to state 34
    BOOLEAN         shift and go to state 35
    CBOOLEAN        shift and go to state 36
    MAP             shift and go to state 37

    statement                      shift and go to state 38
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    while                          shift and go to state 6
    if                             shift and go to state 7
    command                        shift and go to state 8
    procedure                      shift and go to state 9
    call                           shift and go to state 10
    empty                          shift and go to state 11
    cell_proc                      shift and go to state 12
    arithmetic_expression          shift and go to state 13
    type                           shift and go to state 14
    name                           shift and go to state 15

state 3

    (15) statements -> statement .

    WHILE           reduce using rule 15 (statements -> statement .)
    DO              reduce using rule 15 (statements -> statement .)
    IF              reduce using rule 15 (statements -> statement .)
    LEFT            reduce using rule 15 (statements -> statement .)
    RIGHT           reduce using rule 15 (statements -> statement .)
    BACK            reduce using rule 15 (statements -> statement .)
    STEP            reduce using rule 15 (statements -> statement .)
    LOOK            reduce using rule 15 (statements -> statement .)
    PROC            reduce using rule 15 (statements -> statement .)
    NAME            reduce using rule 15 (statements -> statement .)
    BAR             reduce using rule 15 (statements -> statement .)
    EMP             reduce using rule 15 (statements -> statement .)
    SET             reduce using rule 15 (statements -> statement .)
    RESET           reduce using rule 15 (statements -> statement .)
    CLR             reduce using rule 15 (statements -> statement .)
    INC             reduce using rule 15 (statements -> statement .)
    DEC             reduce using rule 15 (statements -> statement .)
    INT             reduce using rule 15 (statements -> statement .)
    CINT            reduce using rule 15 (statements -> statement .)
    BOOLEAN         reduce using rule 15 (statements -> statement .)
    CBOOLEAN        reduce using rule 15 (statements -> statement .)
    MAP             reduce using rule 15 (statements -> statement .)
    NEWLINE         reduce using rule 15 (statements -> statement .)
    $end            reduce using rule 15 (statements -> statement .)
    RPAREN          reduce using rule 15 (statements -> statement .)


state 4

    (16) statement -> declaration . NEWLINE
    (34) assignment -> declaration . EQUALS expression

    NEWLINE         shift and go to state 39
    EQUALS          shift and go to state 40


state 5

    (17) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 41


state 6

    (18) statement -> while . NEWLINE

    NEWLINE         shift and go to state 42


state 7

    (19) statement -> if . NEWLINE

    NEWLINE         shift and go to state 43


state 8

    (20) statement -> command . NEWLINE
    (73) command -> command . error

    NEWLINE         shift and go to state 44
    error           shift and go to state 45


state 9

    (21) statement -> procedure . NEWLINE

    NEWLINE         shift and go to state 46


state 10

    (22) statement -> call . NEWLINE

    NEWLINE         shift and go to state 47


state 11

    (23) statement -> empty . NEWLINE

    NEWLINE         shift and go to state 48


state 12

    (24) statement -> cell_proc . NEWLINE

    NEWLINE         shift and go to state 49


state 13

    (25) statement -> arithmetic_expression . NEWLINE

    NEWLINE         shift and go to state 50


state 14

    (26) declaration -> type . name
    (27) declaration -> type . error
    (36) name -> . NAME

    error           shift and go to state 52
    NAME            shift and go to state 53

    name                           shift and go to state 51

state 15

    (33) assignment -> name . EQUALS expression
    (35) assignment -> name . EQUALS error

    EQUALS          shift and go to state 54


state 16

    (65) while -> WHILE . logic_expression DO NEWLINE statements_group
    (67) while -> WHILE . error
    (45) logic_expression -> . LT arithmetic_expression arithmetic_expression
    (46) logic_expression -> . GT arithmetic_expression arithmetic_expression
    (47) logic_expression -> . NOT logic_expression
    (48) logic_expression -> . NOT call
    (49) logic_expression -> . OR or_arg or_arg

    error           shift and go to state 56
    LT              shift and go to state 57
    GT              shift and go to state 58
    NOT             shift and go to state 59
    OR              shift and go to state 60

    logic_expression               shift and go to state 55

state 17

    (66) while -> DO . error

    error           shift and go to state 61


state 18

    (68) if -> IF . logic_expression NEWLINE statements_group
    (69) if -> IF . logic_expression NEWLINE statements_group ELSE statements_group
    (70) if -> IF . error
    (45) logic_expression -> . LT arithmetic_expression arithmetic_expression
    (46) logic_expression -> . GT arithmetic_expression arithmetic_expression
    (47) logic_expression -> . NOT logic_expression
    (48) logic_expression -> . NOT call
    (49) logic_expression -> . OR or_arg or_arg

    error           shift and go to state 63
    LT              shift and go to state 57
    GT              shift and go to state 58
    NOT             shift and go to state 59
    OR              shift and go to state 60

    logic_expression               shift and go to state 62

state 19

    (74) command -> LEFT .

    NEWLINE         reduce using rule 74 (command -> LEFT .)
    error           reduce using rule 74 (command -> LEFT .)
    ELSE            reduce using rule 74 (command -> LEFT .)
    RPAREN          reduce using rule 74 (command -> LEFT .)


state 20

    (75) command -> RIGHT .

    NEWLINE         reduce using rule 75 (command -> RIGHT .)
    error           reduce using rule 75 (command -> RIGHT .)
    ELSE            reduce using rule 75 (command -> RIGHT .)
    RPAREN          reduce using rule 75 (command -> RIGHT .)


state 21

    (76) command -> BACK .

    NEWLINE         reduce using rule 76 (command -> BACK .)
    error           reduce using rule 76 (command -> BACK .)
    ELSE            reduce using rule 76 (command -> BACK .)
    RPAREN          reduce using rule 76 (command -> BACK .)


state 22

    (77) command -> STEP .

    NEWLINE         reduce using rule 77 (command -> STEP .)
    error           reduce using rule 77 (command -> STEP .)
    ELSE            reduce using rule 77 (command -> STEP .)
    RPAREN          reduce using rule 77 (command -> STEP .)


state 23

    (78) command -> LOOK .

    NEWLINE         reduce using rule 78 (command -> LOOK .)
    error           reduce using rule 78 (command -> LOOK .)
    ELSE            reduce using rule 78 (command -> LOOK .)
    RPAREN          reduce using rule 78 (command -> LOOK .)


state 24

    (71) procedure -> PROC . NAME parameters NEWLINE statements_group
    (72) procedure -> PROC . error

    NAME            shift and go to state 64
    error           shift and go to state 65


state 25

    (79) call -> NAME . parameters
    (91) call -> NAME . error
    (36) name -> NAME .
    (93) parameters -> . parameters name
    (94) parameters -> . name
    (36) name -> . NAME

    error           shift and go to state 67
    EQUALS          reduce using rule 36 (name -> NAME .)
    NAME            shift and go to state 53

    parameters                     shift and go to state 66
    name                           shift and go to state 68

state 26

    (80) cell_proc -> BAR . cell_arg
    (86) cell_proc -> BAR . error
    (85) cell_arg -> . name name number number
    (36) name -> . NAME

    error           shift and go to state 70
    NAME            shift and go to state 53

    cell_arg                       shift and go to state 69
    name                           shift and go to state 71

state 27

    (81) cell_proc -> EMP . cell_arg
    (87) cell_proc -> EMP . error
    (85) cell_arg -> . name name number number
    (36) name -> . NAME

    error           shift and go to state 73
    NAME            shift and go to state 53

    cell_arg                       shift and go to state 72
    name                           shift and go to state 71

state 28

    (82) cell_proc -> SET . cell_arg
    (88) cell_proc -> SET . error
    (85) cell_arg -> . name name number number
    (36) name -> . NAME

    error           shift and go to state 75
    NAME            shift and go to state 53

    cell_arg                       shift and go to state 74
    name                           shift and go to state 71

state 29

    (83) cell_proc -> RESET . cell_arg
    (89) cell_proc -> RESET . error
    (85) cell_arg -> . name name number number
    (36) name -> . NAME

    error           shift and go to state 77
    NAME            shift and go to state 53

    cell_arg                       shift and go to state 76
    name                           shift and go to state 71

state 30

    (84) cell_proc -> CLR . cell_arg
    (90) cell_proc -> CLR . error
    (85) cell_arg -> . name name number number
    (36) name -> . NAME

    error           shift and go to state 79
    NAME            shift and go to state 53

    cell_arg                       shift and go to state 78
    name                           shift and go to state 71

state 31

    (50) arithmetic_expression -> INC . first_ar second_ar
    (52) first_ar -> . name
    (53) first_ar -> . arithmetic_expression
    (54) first_ar -> . call
    (36) name -> . NAME
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (79) call -> . NAME parameters
    (91) call -> . NAME error

    NAME            shift and go to state 84
    INC             shift and go to state 31
    DEC             shift and go to state 32

    first_ar                       shift and go to state 80
    name                           shift and go to state 81
    arithmetic_expression          shift and go to state 82
    call                           shift and go to state 83

state 32

    (51) arithmetic_expression -> DEC . first_ar second_ar
    (52) first_ar -> . name
    (53) first_ar -> . arithmetic_expression
    (54) first_ar -> . call
    (36) name -> . NAME
    (50) arithmetic_expression -> . INC first_ar second_ar
    (51) arithmetic_expression -> . DEC first_ar second_ar
    (79) call -> . NAME parameters
    (91) call -> . NAME error

    NAME            shift and go to state 84
    INC             shift and go to state 31
    DEC             shift and go to state 32

    first_ar                       shift and go to state 85
    name                           shift and go to state 81
    arithmetic_expression          shift and go to state 82
    call                           shift and go to state 83

state 33

    (28) type -> INT .

    error           reduce using rule 28 (type -> INT .)
    NAME            reduce using rule 28 (type -> INT .)


state 34

    (29) type -> CINT .

    error           reduce using rule 29 (type -> CINT .)
    NAME            reduce using rule 29 (type -> CINT .)


state 35

    (30) type -> BOOLEAN .

    error           reduce using rule 30 (type -> BOOLEAN .)
    NAME            reduce using rule 30 (type -> BOOLEAN .)


state 36

    (31) type -> CBOOLEAN .

    error           reduce using rule 31 (type -> CBOOLEAN .)
    NAME            reduce using rule 31 (type -> CBOOLEAN .)


state 37

    (32) type -> MAP .

    error           reduce using rule 32 (type -> MAP .)
    NAME            reduce using rule 32 (type -> MAP .)


state 38

    (14) statements -> statements statement .

    WHILE           reduce using rule 14 (statements -> statements statement .)
    DO              reduce using rule 14 (statements -> statements statement .)
    IF              reduce using rule 14 (statements -> statements statement .)
    LEFT            reduce using rule 14 (statements -> statements statement .)
    RIGHT           reduce using rule 14 (statements -> statements statement .)
    BACK            reduce using rule 14 (statements -> statements statement .)
    STEP            reduce using rule 14 (statements -> statements statement .)
    LOOK            reduce using rule 14 (statements -> statements statement .)
    PROC            reduce using rule 14 (statements -> statements statement .)
    NAME            reduce using rule 14 (statements -> statements statement .)
    BAR             reduce using rule 14 (statements -> statements statement .)
    EMP             reduce using rule 14 (statements -> statements statement .)
    SET             reduce using rule 14 (statements -> statements statement .)
    RESET           reduce using rule 14 (statements -> statements statement .)
    CLR             reduce using rule 14 (statements -> statements statement .)
    INC             reduce using rule 14 (statements -> statements statement .)
    DEC             reduce using rule 14 (statements -> statements statement .)
    INT             reduce using rule 14 (statements -> statements statement .)
    CINT            reduce using rule 14 (statements -> statements statement .)
    BOOLEAN         reduce using rule 14 (statements -> statements statement .)
    CBOOLEAN        reduce using rule 14 (statements -> statements statement .)
    MAP             reduce using rule 14 (statements -> statements statement .)
    NEWLINE         reduce using rule 14 (statements -> statements statement .)
    $end            reduce using rule 14 (statements -> statements statement .)
    RPAREN          reduce using rule 14 (statements -> statements statement .)


state 39

    (16) statement -> declaration NEWLINE .

    WHILE           reduce using rule 16 (statement -> declaration NEWLINE .)
    DO              reduce using rule 16 (statement -> declaration NEWLINE .)
    IF              reduce using rule 16 (statement -> declaration NEWLINE .)
    LEFT            reduce using rule 16 (statement -> declaration NEWLINE .)
    RIGHT           reduce using rule 16 (statement -> declaration NEWLINE .)
    BACK            reduce using rule 16 (statement -> declaration NEWLINE .)
    STEP            reduce using rule 16 (statement -> declaration NEWLINE .)
    LOOK            reduce using rule 16 (statement -> declaration NEWLINE .)
    PROC            reduce using rule 16 (statement -> declaration NEWLINE .)
    NAME            reduce using rule 16 (statement -> declaration NEWLINE .)
    BAR             reduce using rule 16 (statement -> declaration NEWLINE .)
    EMP             reduce using rule 16 (statement -> declaration NEWLINE .)
    SET             reduce using rule 16 (statement -> declaration NEWLINE .)
    RESET           reduce using rule 16 (statement -> declaration NEWLINE .)
    CLR             reduce using rule 16 (statement -> declaration NEWLINE .)
    INC             reduce using rule 16 (statement -> declaration NEWLINE .)
    DEC             reduce using rule 16 (statement -> declaration NEWLINE .)
    INT             reduce using rule 16 (statement -> declaration NEWLINE .)
    CINT            reduce using rule 16 (statement -> declaration NEWLINE .)
    BOOLEAN         reduce using rule 16 (statement -> declaration NEWLINE .)
    CBOOLEAN        reduce using rule 16 (statement -> declaration NEWLINE .)
    MAP             reduce using rule 16 (statement -> declaration NEWLINE .)
    NEWLINE         reduce using rule 16 (statement -> declaration NEWLINE .)
    $end            reduce using rule 16 (statement -> declaration NEWLINE .)
    RPAREN          reduce using rule 16 (statement -> declaration NEWLINE .)


state 40
